# treeify

./: .gitignore  Cargo.toml  README.md
src/: main.rs  model.rs
src/graph/: gexf.rs  graphml.rs  graphviz.rs  mod.rs
