[package]
name = "treeify"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }

time = { version = "0.3", features = ["serde", "serde-human-readable"] }

quick-xml = { version = "0.38.1", features = ["serde", "serialize"] }
io-adapters = "0.4"
isx = "0.1"
rayon = "1"
indicatif = { version = "0.18.0", features = ["futures", "improved_unicode", "tokio", "rayon"] }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
urlencoding = "2"
